kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: self-healing-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: self-healing-app

  template:
    metadata:
      labels:
        app: self-healing-app

    spec:
      containers:
      - name: self-healing-container
        image: arumugam/self-healing-platform:latest

        ports:
        - containerPort: 80

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
