kubernetes/service.yaml

apiVersion: v1
kind: Service

metadata:
  name: self-healing-service

spec:
  selector:
    app: self-healing-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
